Se suben mejoras de código

--- a/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
@@ -32,7 +32,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Seguridad</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-table"></i><a href="@Url.Action("Index","Roles")">Roles</a></li>
-                        <li><i class="fa fa-table"></i><a href="#">Usuarios</a></li>
+                        <li><i class="fa fa-table"></i><a href="@Url.Action("Index","Usuarios")">Usuarios</a></li>
                     </ul>
                 </li>
                 @* <li class="menu-item-has-children dropdown">
