--- a/PreOrclFrontEnd/Views/Auth/UsuarioInactivo.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/UsuarioInactivo.cshtml
@@ -1,4 +1,4 @@
-﻿@model PreOrclFrontEnd.Models.Usuarios
+﻿
 @{
     Layout = null;
 }
@@ -19,7 +19,7 @@
 
     <environment include="Development">
         @*<link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
-        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
+            <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
@@ -34,7 +34,7 @@
 
     <environment exclude="Development">
         @*<link rel="apple-touch-icon" href="https://i.imgur.com/QRAUqs9.png">
-        <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
+            <link rel="shortcut icon" href="https://i.imgur.com/QRAUqs9.png">*@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
@@ -53,51 +53,12 @@
             <div class="login-content">
                 <div class="login-logo">
                     <a href="index.html">
-                        @*<img class="align-content" src="images/logo.png" alt="">*@
+                      
                     </a>
                 </div>
                 <div class="login-form">
-                    <form asp-action="Login" id="LoginForm">
-                        @Html.AntiForgeryToken()
-                        @if (ViewData["msjLogin"] != null) {
-                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                            <strong>@ViewData["msjLogin"].ToString()</strong> favor verificar la información ingresada.
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        }
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="Usuario" class="form-control-label"></label>
-                            <input asp-for="Usuario" type="email" class="form-control" placeholder="Email" />
-                            <span asp-validation-for="Usuario" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Password" class="form-control-label"></label>
-                            <input asp-for="Password" type="password" class="form-control" placeholder="Password">
-                            <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>
-
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Recordar
-                            </label>
-                            <label class="pull-right">
-                                <a href="#">¿Recuperar Contraseña?</a>
-                            </label>
-                        </div>
-                        <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
-                        <div class="social-login-content">
-                            <div class="social-button">
-                                <a class="btn btn-default" asp-controller="Auth" asp-action="Micro">Iniciar sesión con cuenta de Microsoft</a>
-                                @*<a class="btn btn-default" asp-action="#">Iniciar sesión con cuenta de Google</a>*@
-                            </div>
-                        </div>
-                        @*<div class="register-link m-t-15 text-center">
-            <p>Don't have account ? <a href="#"> Sign Up Here</a></p>
-        </div>*@
-                    </form>
+                  <h4>Muy bién tu Usuario ya está en nuestra base de datos</h4>
+                    <h5>Sólo espera la activación del administrador</h5>
                 </div>
             </div>
         </div>
@@ -105,9 +66,9 @@
     </div>
 
     @*<div class="row">
-        <a asp-action="Microsoft">Microsoft</a>
+            <a asp-action="Microsoft">Microsoft</a>
 
-    </div>*@
+        </div>*@
     <environment include="Development">
 
 
