--- a/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_HeaderPartial.cshtml
@@ -4,8 +4,8 @@
 <header id="header" class="header">
     <div class="top-left">
         <div class="navbar-header">
-            <a class="navbar-brand" href="./"><img src="~/images/x_juridico.jpg" width="50" alt="Logo"></a>
-            <a class="navbar-brand hidden" href="./"><img src="~/images/x_juridico.jpg" width="50" alt="Logo"></a>
+            @*<a class="navbar-brand" href="./"><img src="~/images/x_juridico.jpg" width="50" alt="Logo"></a>
+            <a class="navbar-brand hidden" href="./"><img src="~/images/x_juridico.jpg" width="50" alt="Logo"></a>*@
             <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
         </div>
     </div>
