--- a/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
@@ -13,19 +13,9 @@
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Registros</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-puzzle-piece"></i><a asp-area="" asp-controller="SisPerPersonas" asp-action="Index">Personas</a></li>
+                        <li><i class="fa fa-puzzle-piece"></i><a asp-area="" asp-controller="SisPerPersonas" asp-action="Index">Clientes/Imputados</a></li>
                         <li><i class="fa fa-id-badge"></i><a asp-area="" asp-controller="Casos" asp-action="Index">Casos</a></li>
                         <li><i class="fa fa-book"></i><a asp-area="" asp-controller="Actividades" asp-action="Index">Actividades</a></li>
-                        <li><i class="fa fa-file-word-o"></i><a href="#">Imputados</a></li>
-                        <li><i class="fa fa-bars"></i><a href="#">Jurisprudencia</a></li>
-
-                        @*<li><i class="fa fa-id-card-o"></i><a href="ui-cards.html">Cards</a></li>
-        <li><i class="fa fa-exclamation-triangle"></i><a href="ui-alerts.html">Alerts</a></li>
-        <li><i class="fa fa-spinner"></i><a href="ui-progressbar.html">Progress Bars</a></li>
-        <li><i class="fa fa-fire"></i><a href="ui-modals.html">Modals</a></li>
-        <li><i class="fa fa-book"></i><a href="ui-switches.html">Switches</a></li>
-        <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>
-        <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Typography</a></li>*@
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
@@ -35,13 +25,14 @@
                         <li><i class="fa fa-table"></i><a href="@Url.Action("Index","Usuarios")">Usuarios</a></li>
                     </ul>
                 </li>
-                @* <li class="menu-item-has-children dropdown">
+                 <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Forms</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="menu-icon fa fa-th"></i><a href="forms-basic.html">Basic Form</a></li>
-                <li><i class="menu-icon fa fa-th"></i><a href="forms-advanced.html">Advanced Form</a></li>
+                <li><i class="menu-icon fa fa-th"></i><a href="@Url.Action("ProcesoPorEstado","CuadroMando")">Proceso Por Estado</a></li>
+                <li><i class="menu-icon fa fa-th"></i><a href="@Url.Action("ActividadesPorEstado","CuadroMando")">Actividades Por Estado</a></li>
+                <li><i class="menu-icon fa fa-th"></i><a href="@Url.Action("CargaPorUsuario","CuadroMando")">Carga Por Usuario</a></li>
             </ul>
-        </li>*@
+        </li>
 
                 @*<li class="menu-title">Icons</li>*@
                 <!-- /.menu-title -->
