Inactivar y reactivar usuario

--- a/PreOrclFrontEnd/Views/Usuarios/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Usuarios/Index.cshtml
@@ -42,14 +42,14 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <strong class="card-title">Personas</strong>
+                        <strong class="card-title">Usuarios</strong>
                     </div>
                     <div class="card-body">
-                        <div class="row form-group">
-                            <div class="col-sm-12">
-                                <a asp-action="Create" title="Agregar Persona" class="btn btn-primary">Agregar Persona</a>
-                            </div>
-                        </div>
+                        @*<div class="row form-group">
+                                <div class="col-sm-12">
+                                    <a asp-action="Create" title="Agregar Persona" class="btn btn-primary">Agregar Persona</a>
+                                </div>
+                            </div>*@
                         <div class="row">
                             <div id="bootstrap-data-table_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                                 <div class="row">
@@ -90,15 +90,15 @@
                                                         </td>
                                                         <td>
                                                             <div class="row">
-                                                                <div class="col-sm-3">
-                                                                    <a asp-action="Edit" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa fa-edit" style="color:forestgreen"></i></a>
-                                                                </div>
-                                                                <div class="col-sm-3">
-                                                                    <a href="#" data-toggle="modal" data-target="#largeModal" onclick="modalShow({'NameModalPartial':'#largeModalPartial','Url':'@Url.Action("DetailsPartial","SisPerPersonas")','Id':@item.IdUsuario})" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>
+                                                                @*<div class="col-sm-3">
+                                                                        <a asp-action="Edit" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa fa-edit" style="color:forestgreen"></i></a>
+                                                                    </div>
+                                                                    <div class="col-sm-3">
+                                                                        <a href="#" data-toggle="modal" data-target="#largeModal" onclick="modalShow({'NameModalPartial':'#largeModalPartial','Url':'@Url.Action("DetailsPartial","SisPerPersonas")','Id':@item.IdUsuario})" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>
 
-                                                                </div>
+                                                                    </div>*@
                                                                 <div class="col-sm-3">
-                                                                    <a asp-action="Delete" asp-route-id="@item.IdUsuario" title="Eliminar Registro"><i class="fa fa-eraser" style="color:red"></i></a>
+                                                                    <a href="#" data-toggle="modal" data-target="#smallmodal" onclick="modalShow({'NameModalPartial':'#smallModalPartial','Url':'@Url.Action("InactivateOrActivatePartial","Usuarios")','Id':@item.IdUsuario})" title="Inactivar"><i class="fa fa-eraser" style="color:forestgreen"></i></a>
                                                                 </div>
                                                             </div>
                                                         </td>
@@ -115,7 +115,7 @@
             </div>
 
         </div>
-        <partial name="../Modals/_LargeModalPartial" />
+        <partial name="../Modals/_SmallModalPartial" />
     </div>
 
 </div>
@@ -133,5 +133,7 @@
     <script src="~/templateAdmin/assets/js/init/datatables-init.js"></script>
     <script src="~/js/dataTableLanguageESConfig.js"></script>
     <script src="~/js/modalConfig.js"></script>
+    <script src="~/lib/Microsoft.jQuery.Unobtrusive.Ajax/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/js/custoSweetAlertAjax.js"></script>
 
 }
